2014-03-04  Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_api.php: fixed the function "api_get_policies".
	Thanks Cucumber.

2014-03-04  Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_api.php: fixed the function
	"api_get_tactical_view". Thanks Cucumber.

2014-03-04  Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_api.php: fixed the function "api_get_gis_agent".
	Thanks Cucumber.
	
	* include/functions_io.php: cleaned source code style.

2014-03-03  Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_api.php: fixed the call "get_total_modules" now
	it does not count the pending delete modules. And thanks Cucumber for
	to the advise.

2014-02-25  Sergio Martin <sergio.martin@artica.es>

	* include/javascript/pandora_events.js
	include/ajax/events.php: Change command timeouts in responses
	from 10 to 9 seconds to avoid problems in certain systems. Add
	little feedback when command reach timeout time

2014-02-20  Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/agentes/fields_manager.php: added the id column in the
	list of fields because it is needed in some api calls.

2014-02-19  Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/agentes/module_manager_editor_common.php: added lost id
	of module, because the user needs for example the api calls.

2014-02-18 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* operation/agentes/ver_agente.php: Fixed agent tooltip
	for metaconsole networkmap. Now check ACL tags are checked.

2014-02-17 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

        * operation/agentes/status_monitor.php: Fixed tag combo,
        now only shows user tags not all.

2014-02-14 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_tags.php: Fixed several bugs with
        ACL propagation and ACL tags.

	* include/functions_graph.php: Implemented ACL tags in
	graph_event_module function.

2014-02-12  Sergio Martin <sergio.martin@artica.es>
